# IRfinder-mdl

./: .dockstore.yml  .gitignore  LICENSE  README.md  pyproject.toml
Docker/: Dockerfile  build_and_push.sh
WDL/: README.md  inputs.template.json  irfinder_mdl.wdl
docs/: interpreting-ir-metrics.md
irfinder_mdl/: __init__.py  cli.py  gtf.py  quantify.py  summarize.py  version.py
tests/: test_quantify.py
